Create portfolio detail page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,9 +9,9 @@ body {
 }
 
 a {
-  padding: 8px;
-  margin: 8px 16px;
-  background-color: red;
-  text-decoration: none;
-  color: orange;
+  // padding: 8px;
+  // margin: 8px 16px;
+  // background-color: red;
+  // text-decoration: none;
+  // color: orange;
 }
