--- a/styles/main.scss
+++ b/styles/main.scss
@@ -62,3 +62,34 @@ main,
 section {
   height: 100vh;
 }
+
+.fadeInUp {
+  animation-duration: 0.8s;
+  animation-delay: 0.1s;
+  animation-fill-mode: backwards;
+  animation-name: fadeInUp;
+
+  &.delay02 {
+    animation-delay: 0.2s;
+  }
+  &.delay03 {
+    animation-delay: 0.3s;
+  }
+  &.delay06 {
+    animation-delay: 0.6s;
+  }
+  &.delay07 {
+    animation-delay: 0.7s;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
