--- a/components/shared/Header/Header.scss
+++ b/components/shared/Header/Header.scss
@@ -16,13 +16,11 @@ nav {
   justify-content: space-between;
 
   .logo {
-    display: inline-block;
-    padding-top: 0.3125rem;
-    padding-bottom: 0.3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
-    line-height: inherit;
-    white-space: nowrap;
+    display: flex;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   a {
